fix endpoints in doc
