# resources/internal/server/handlers.go
@@ -145,7 +145,7 @@ func (s *Server) getIssue(c *gin.Context) {
 // @Failure 400 {string} string "Неверные параметры запроса"
 // @Failure 404 {string} string "Проект не найден"
 // @Failure 500 {string} string "Внутренняя ошибка сервера"
-// @Router /api/v1//issues/by-project/{projectId} [get]
+// @Router /api/v1/issues/by-project/{projectId} [get]
 func (s *Server) getIssuesByProject(c *gin.Context) {
 	projectId, err := strconv.Atoi(c.Params.ByName("projectId"))
 	if err != nil {
@@ -184,7 +184,7 @@ func (s *Server) getIssuesByProject(c *gin.Context) {
 // @Failure 400 {string} string "Неверный ID задачи"
 // @Failure 404 {string} string "Задача не найдена"
 // @Failure 500 {string} string "Внутренняя ошибка сервера"
-// @Router /api/v1//histories/by-issue/{issueId} [get]
+// @Router /api/v1/histories/by-issue/{issueId} [get]
 func (s *Server) getHistoryByIssue(c *gin.Context) {
 	issueId, err := strconv.Atoi(c.Params.ByName("issueId"))
 	if err != nil {
